--- a/style.css
+++ b/style.css
@@ -14,20 +14,20 @@
 
 
 .back{
-    height: 80vh;
+    height: 70vh;
     background: rgba(128, 128, 128, 0.122);
 }
 
 .content{
-    margin: 10% 10% 0 10%;
-    width: 20%;
+    margin: 10% 10% 0 0;
+    width: 25%;
     padding: 6px;
     background: rgb(144,144,144);
     background: linear-gradient(90deg, rgba(144,144,144,0.30885857761073177) 0%, rgba(230,220,220,0.07916670086003152) 77%);
 }
 
 .content-2{
-    margin-left: 10%;
+  
     margin-top: 1%;
         font-size: 40px;
         color: #333347;
@@ -35,13 +35,13 @@
 }
 
 .content-3{
-    margin-left: 10%;
+
     margin-top: 1%;
         color: #333347;
 }
 
 .content-4{
-    margin-left: 10%;
+   
     margin-top: 1%;
    
 }
@@ -51,7 +51,7 @@
 @media (max-width:426px) {
 
     .back{
-        height: 60vh;
+        height: 40vh;
         background: rgba(128, 128, 128, 0.122);
     }
   
@@ -61,7 +61,7 @@
 
     .content{
      
-        width: 90%;
+        width: 100%;
         padding: 6px;
         background: rgb(144,144,144);
         background: linear-gradient(90deg, rgba(144,144,144,0.30885857761073177) 0%, rgba(230,220,220,0.07916670086003152) 77%);
