--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 
 .back{
-    height: 435px;
+    height: 450px;
     background: rgba(128, 128, 128, 0.122);
 }
 
@@ -48,7 +48,7 @@
 
 
 
-@media (min-width: 480px) {
+@media screen and (max-width:320px) {
 
     .back{
         height: 150px;
@@ -57,7 +57,7 @@
   
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width:321px) and (max-width:768px) {
 
     .back{
         height: 400px;
