--- a/style.css
+++ b/style.css
@@ -1,11 +1,23 @@
 
+.navbar-nav .nav-item .nav-link{
 
-.navbar-nav .nav-item .nav-link {
-
-    color: #333347;
   
+   
     display: flex;
     vertical-align: middle;
+  
+}
+
+
+
+.font-mont a{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+
+.nav-item a{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
 }
 
 .btn-primary{
@@ -19,29 +31,34 @@
 }
 
 .content{
-  
+    font-family: 'Montserrat', sans-serif;
     padding: 6px;
-    background: rgb(144,144,144);
-    background: linear-gradient(90deg, rgba(144,144,144,0.30885857761073177) 0%, rgba(230,220,220,0.07916670086003152) 28%);
+    background: rgb(215,215,215);
+    font-weight: 800;
+background: linear-gradient(90deg, rgba(215,215,215,1) 0%, rgba(217,217,217,0.7234244039412641) 0%, rgba(217,217,217,0) 35%);
 }
 
 .content-2{
+    
+   
   
     margin-top: 1%;
         font-size: 40px;
-        color: #333347;
-        font-weight: bold;
+        color: #000000;
+        font-weight:600 ;
 }
 
 .content-3{
-
+    font-family: 'Montserrat', sans-serif;
     margin-top: 1%;
-        color: #333347;
+        color: #000000;
+        font-weight: 800;
 }
 
 .content-4{
-   
+    font-family: 'Montserrat', sans-serif;
     margin-top: 1%;
+    font-weight: 800;   
    
 }
 
@@ -61,7 +78,7 @@
 }
 
 .big_text{
-
+    
     font-weight: bold;
     font-size: 30px;
     text-align: center;
@@ -69,6 +86,8 @@
 }
 
 .text_normal{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
     text-align: center;
 }
 
@@ -76,16 +95,58 @@
 .chart_text{
     font-size: 25px;
     font-weight: 500;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
 }
 
 .chart_text_normal{
     font-size: 16px;
-    color: #b3b3b3;
+  
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
 }
 
 .link-ssd a{
 
         text-decoration: none;
-        color: #333347;
+        color: #000000;
 }
 
+.btn-color{
+    background-color: rgb(35,210,210);
+    border-color:rgb(35,210,210) ;
+}
+
+
+.back-2{
+    padding: 5% 0 5% 0;
+    background: rgba(128, 128, 128, 0.068);
+
+}
+
+.data{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    color: #607d9c;
+    letter-spacing: 1px;
+    line-height: 1.3;
+ 
+
+}
+
+.custom{
+
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 25px;
+    letter-spacing: 3px;
+
+
+}
+
+.just_text{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+    color: #a1a1a1;
+}
