--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 
 .btn-primary{
     background-color: rgb(30,38,109);
+    border-color: rgb(30,38,109);
 }
 
 
@@ -110,6 +111,9 @@ background: linear-gradient(90deg, rgba(215,215,215,1) 0%, rgba(217,217,217,0.72
 .btn-color{
     background-color: rgb(35,210,210);
     border-color:rgb(35,210,210) ;
+    color: #000000;
+    letter-spacing: 3px;
+    
 }
 
 
@@ -144,4 +148,32 @@ background: linear-gradient(90deg, rgba(215,215,215,1) 0%, rgba(217,217,217,0.72
     font-weight: 400;
     font-size: 18px;
     color: #a1a1a1;
+}
+
+
+.back-3{
+    padding: 5% 0 5% 0;
+    background-color: rgb(30,38,109);
+
+}
+
+
+.mobile{
+    color: white;
+    font-size: 32px;
+}
+
+.mobile_text{
+    font-size: 18px;
+    color: rgba(156, 156, 156, 0.375);
+    font-weight: 500;
+}
+
+.font-color{
+    color: white;
+}
+
+.border-light-css{
+    padding: 4%;
+    border: solid 1px rgba(170, 168, 168, 0.349);
 }
