--- a/style.css
+++ b/style.css
@@ -62,15 +62,9 @@ background: linear-gradient(90deg, rgba(215,215,215,1) 0%, rgba(217,217,217,0.72
 
 @media (max-width:426px) {
 
-    .content-2{
-     
-  
-         
+    .content-2{  
         font-size: 28px;
-  
-    }
-  
-  
+    } 
 }
 
 .big_text{
@@ -112,7 +106,7 @@ background: linear-gradient(90deg, rgba(215,215,215,1) 0%, rgba(217,217,217,0.72
     background-color: rgb(35,210,210);
     border-color:rgb(35,210,210) ;
     color: #000000;
-    letter-spacing: 3px;
+   
     
 }
 
@@ -129,18 +123,13 @@ background: linear-gradient(90deg, rgba(215,215,215,1) 0%, rgba(217,217,217,0.72
     color: #607d9c;
     letter-spacing: 1px;
     line-height: 1.3;
- 
-
 }
 
 .custom{
-
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 25px;
     letter-spacing: 3px;
-
-
 }
 
 .just_text{
@@ -176,4 +165,28 @@ background: linear-gradient(90deg, rgba(215,215,215,1) 0%, rgba(217,217,217,0.72
 .border-light-css{
     padding: 4%;
     border: solid 1px rgba(170, 168, 168, 0.349);
+}
+
+
+.news{
+    color: #607d9c;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.respon{
+    color: rgba(0, 0, 0, 0.688);
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.text-color{
+    color: #a1a1a1;
+    font-size: 17px;
+}
+
+
+.card-css{
+    padding: 10% 5% 10% 5%;
+ 
 }
